tests/ctu/pass/array-3.ct
export def main(): int {
    var arr: [int:10uz] = [ 25, 0, 50 ];
    final x = 2;

    arr[x] = 0;
    arr[3] = 25;

    return arr[3];
}
