tests/ctu/fail/direct-index.ct
var x = [25, 60, 75][3];
